Fixed the double vertical scrollbar

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 
 @import './app/shared/styles/font-awesone/css/all.css';
-html,
+html {
+    overflow: hidden;
+}
+
 body {
     height: 100%;
     overflow-x: hidden;
